--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                     </div>
 
                     <!-- Single ID: triggers openPdfModal -->
-                    <div onclick="openPdfModal('Single ID 2.0.pdf')" class="cursor-pointer block">
+                    <div onclick="openPdfModal('single-id-2-0.pdf')" class="cursor-pointer block">
                         <div class="img-container aspect-square rounded-[32px] glass-card mb-6 overflow-hidden no-hover-effect">
                             <img src="0001.jpg" alt="Single ID" onerror="this.style.opacity='0'" class="w-full h-full object-cover transition-all duration-700">
                         </div>
@@ -594,3 +594,4 @@
     </script>
 </body>
 </html>
+
