--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                     </div>
 
                     <!-- Single ID: triggers openPdfModal -->
-                    <a href="https://drive.google.com/file/d/1m-WTbn8xbP6wLS6UfKKS-FJX67FXlx-g/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="cursor-pointer block">
+                    <a href="https://drive.google.com/file/d/1m-WTbn8xbP6wLS6UfKKS-FJX67FXlx-g/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="cursor-pointer block">
                         <div class="img-container aspect-square rounded-[32px] glass-card mb-6 overflow-hidden no-hover-effect">
                             <img src="0001.jpg" alt="Single ID" onerror="this.style.opacity='0'" class="w-full h-full object-cover transition-all duration-700">
                         </div>
@@ -594,6 +594,7 @@
     </script>
 </body>
 </html>
+
 
 
 
